Fix gaps in the commit message container revealing a different background
Fixes #12900

--- a/app/styles/ui/changes/_commit-message.scss
+++ b/app/styles/ui/changes/_commit-message.scss
@@ -59,6 +59,9 @@
   &.with-action-bar {
     .description-field textarea {
       min-height: 80px;
+
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
     }
   }
 
@@ -108,7 +111,9 @@
     .action-bar {
       padding: var(--spacing-half);
       background: var(--box-background-color);
-      border-radius: var(--border-radius);
+
+      border-bottom-left-radius: var(--border-radius);
+      border-bottom-right-radius: var(--border-radius);
 
       // We're not faking being a textbox any more
       cursor: default;
